; ModuleID = '/home/carl/AnghaBench/linux/net/dsa/extr_dsa.c_dsa_tag_drivers_unregister.c'
source_filename = "/home/carl/AnghaBench/linux/net/dsa/extr_dsa.c_dsa_tag_drivers_unregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dsa_tag_driver = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dsa_tag_drivers_unregister(%struct.dsa_tag_driver** %0, i32 %1) #0 {
  %3 = alloca %struct.dsa_tag_driver**, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.dsa_tag_driver** %0, %struct.dsa_tag_driver*** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %17, %2
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp ult i32 %7, %8
  br i1 %9, label %10, label %20

10:                                               ; preds = %6
  %11 = load %struct.dsa_tag_driver**, %struct.dsa_tag_driver*** %3, align 8
  %12 = load i32, i32* %5, align 4
  %13 = zext i32 %12 to i64
  %14 = getelementptr inbounds %struct.dsa_tag_driver*, %struct.dsa_tag_driver** %11, i64 %13
  %15 = load %struct.dsa_tag_driver*, %struct.dsa_tag_driver** %14, align 8
  %16 = call i32 @dsa_tag_driver_unregister(%struct.dsa_tag_driver* %15)
  br label %17

17:                                               ; preds = %10
  %18 = load i32, i32* %5, align 4
  %19 = add i32 %18, 1
  store i32 %19, i32* %5, align 4
  br label %6

20:                                               ; preds = %6
  ret void
}

declare dso_local i32 @dsa_tag_driver_unregister(%struct.dsa_tag_driver*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
